--- a/gb/nsc413_5.md
+++ b/gb/nsc413_5.md
@@ -1,11 +1,4 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ripamf2991/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://hua.vcfkoo.ga/hua/7" rel="nofollow">大纪元</a> | <a href="http://hua.vcfkoo.ga/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://hua.vcfkoo.ga/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://hua.vcfkoo.ga/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://hua.vcfkoo.ga/hua/11" rel="nofollow">看中国</a> | <a href="http://hua.vcfkoo.ga/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://hua.vcfkoo.ga/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://hua.vcfkoo.ga/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/ripamf2991/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ripamf2991/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/28/n11751027.md#1" target="_blank">程晓容：法制人权黑暗年 2019的中国故事</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/28/n11751027.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-77223993-150x120.jpg" align ="left"></a>要想了解中国，不应听信中共兜售的故事，因为那些章节里的鲜花和光环，碾碎了几代中国人的权利和幸福、还企图淹没苦难中的呐喊和抗争。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 4:55 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/28/n11750581.md#1" target="_blank">【拍案惊奇】香港水源是否完全依赖大陆？</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/28/n11750581.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15e4678d97207c6d_ttl7day5N1_tn1227-150x120.jpg" align ="left"></a>今天是美东时间的2019年12月27日，周五。今天我们来聊一个话题，这个话题经常会在网上引起争论，就是香港的水资源，是不是完全依赖大陆？很多网友在争论的时候，各说各话，多是喊口号，很少有人深入细致去分析。今天我们谈这个。我们就事论事，在这场香港“水革命”持续的时候，谈谈香港的“水”，到底是怎么来的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 3:00 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11749930.md#1" target="_blank">3万元鹤岗买房 学者：产业不振 人口外流</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11749930.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/a4-1@1200x1200-1-150x120.jpg" align ="left"></a>3万～5万元人民币就能在鹤岗买房安家，使这个黑龙江的小城市成为了“网红”。有学者认为， “产业不振和人口外流”的循环，使鹤岗楼市跌到“白菜价”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 2:23 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/28/n11750889.md#1" target="_blank">被指垄断 丰田汽车被中共罚款8761万</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/28/n11750889.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/shutterstock_101986585-150x120.jpg" align ="left"></a>丰田汽车（中国）投资有限公司被中共指责涉垄断，日前被罚款8761.3万元人民币。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 2:01 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/28/n11750751.md#1" target="_blank">中共批台大开民主倒车 学者讥中国有民主？</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/28/n11750751.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/c369fca47693132d48911e39739a0252-150x120.jpg" align ="left"></a>中共国台办反对中华民国立法院通过“反渗透法”，还说这是“大开民主倒车”。对此，台湾师范大学政治学系教授范世平《反渗透法》12月27日嘲讽“中共这么关心台湾的民主？中国自己有民主吗？”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 1:34 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/28/n11750541.md#1" target="_blank">中国外债达到2万亿美元 创新高</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/28/n11750541.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/1312310333481528-600x400-150x120.jpg" align ="left"></a>12月27日，中共国家外汇管理局公布了2019年9月末中国全口径外债数据，数据显示，截至9月底，中国全口径(含本外币)外债余额为2.0325万亿美元，再次创下新高。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 12:57 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11750404.md#1" target="_blank">日大型钢企“日本制铁”计划关闭大陆工厂</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11750404.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2008/07/80730213859836-150x120.jpg" align ="left"></a>日本大型钢铁公司“日本制铁”（Nippon Steel）计划停止其子公司在中国浙江的特殊钢生产，并考虑关闭在浙江的工厂。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 12:51 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11750070.md#1" target="_blank">中国年轻人债台高筑 为何中共最不乐见</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11750070.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2007/11/711260141191508-150x120.jpg" align ="left"></a>中国年轻世代的个人信用恶化，可能是中共最不乐见的一件事。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 12:39 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/28/n11750707.md#1" target="_blank">传习近平不满北京官方 中南海收回规划权</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/28/n11750707.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1302060733482068-600x400-150x120.jpg" align ="left"></a>在中共官方最近一次涉及北京规划的会议上，中共办公厅主任丁薛祥首次以首规委主任的身份公开露面。这也显示中共明确北京规划权属中南海。有港媒解读认为，此举暗示中央对北京官方感到不满。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 12:34 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/28/n11750678.md#1" target="_blank">夏小强：台总统候选人政见会结束 大势已定</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/28/n11750678.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/7d4918c181bda077e56ad46a496f592c-150x120.jpg" align ="left"></a>12月27日，2020年中华民国总统选举第三场候选人政见会在台视举行。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 12:25 PM							</td></tr>
@@ -31,7 +24,20 @@
 <tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11749909.md#1" target="_blank">恐金融风险 中共2年任命12金融副省长??</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11749909.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/gettyimages-1013061576-594x594-150x120.jpg" align ="left"></a>大陆金融高管被密集调任省级副职，31个省级行政区共有15名“金融副省长”。而大陆地方政府债务激增，银行风险处置艰难，中共密集调任金融高管担任副省长被指恐惧金融风险集中爆发。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 3:25 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11749534.md#1" target="_blank">国民党挡反渗透法 林飞帆：到底在反对什么？</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11749534.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2d2dc83e4a7b2c70e7af8930aab15c85-150x120.jpg" align ="left"></a>立法院将在31日审议“反渗透法”草案。民进党副秘书长林飞帆27日表示，“反渗透法”并非仓促立法，当各政党都提法案，国民党不提版本，又不坐下来谈，“那你到底在反对什么？”且拿“反渗透法”跟318太阳花运动类比，根本是超乎脉络。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 1:04 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11749624.md#1" target="_blank">香港圣诞催泪弹肆虐 检测报告揭政府谎言</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11749624.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912240929222478-150x120.jpg" align ="left"></a>香港反送中运动以来，警方的催泪弹在香港各区肆虐，连圣诞节也不例外。最新的检测报告显示，催泪弹CS残留物驻留时间长，即使多次洗涤后残留量也足以致皮肤过敏，揭政府此前谎言。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 12:52 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/28/n11751100.md#1" target="_blank">河北公务员骗取养老金7千万 用于个人挥霍</a><br></h3>中共河北省人力资源和社会保障厅养老计发处原工作人员邓绍中贪污案的细节被曝光，指其用非法手段骗取养老金7000万余元（人民币，下同），大部分用于个人挥霍。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 4:32 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11749541.md#1" target="_blank">油价来到三个月来最高点 有三个原因</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11749541.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/01/1407220846472483-150x120.jpg" align ="left"></a>周四（12月26日）油价上涨约1％，达到三个多月以来的最高。专家表示，油价上涨或是三方面原因促成：中美贸易战据估即将结束；美国原油库存减少以及石油产出减少。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 11:14 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11748096.md#1" target="_blank">【翻墙必看】华为产品价格便宜的内幕</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11748096.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/019-12-05.08-150x120.jpg" align ="left"></a>大纪元每天为读者梳理翻墙必看的文章：
+
+1.【新闻看点】内幕：华为产品价格为何低廉？
+20年前还只是一家鲜为人知的电话交换机供应商，20年后，竟然横扫电信业所有对手。华为凭借着比竞争对手低30%左右的价格，迅速占领了大部分市场。
+
+2.日韩对港表态 安倍强硬 反获习更高待遇
+在中美贸易战的阴影下，日、韩首脑会见习近平时，在香港及中国人权问题上表态.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 8:35 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11748993.md#1" target="_blank">最敏感问题 网民问如何清洗“细颈瓶”被删</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11748993.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/3625b5a7871b2b3192ba17011fe790b7-150x120.png" align ="left"></a>近日，大陆知乎网站网民发帖问“如何清洗细颈瓶？”却被知乎判定“违反互联网相关法律法规”而被删除。网民分析原因是“细颈瓶”的发音与中共总书记的名字“习近平”相似，谴责中共搞文字狱。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 7:06 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11748802.md#1" target="_blank">郭台铭：美中科技战刚开始 台湾应把握机遇</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11748802.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-111808941-150x120.jpg" align ="left"></a>台湾鸿海集团创办人郭台铭日前在接受访问时表示，中美科技战才刚开始，台湾会变成科技整合的关键，应把握机遇。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 7:04 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11749026.md#1" target="_blank">老挝坠入中共债务陷阱 负债超过GDP一半</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11749026.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-111965992-150x120.jpg" align ="left"></a>中共藉由“一带一路”项目让贫穷国家落入债务陷阱，进而取得其基础设施控制权的手段一直为外界所诟病。最近有日本媒体披露，位于东南亚的老挝（寮国）也掉入中共的债务陷阱中，而且越陷越深，其积欠债务已超过该国经济的一半以上。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 5:48 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/26/n11746872.md#1" target="_blank">控告江泽民  山东壁挂厂长田世洪遭迫害离世</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/26/n11746872.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1907181540511973-450x300-150x120.jpg" align ="left"></a>山东威海市文登壁挂厂厂长田世洪坚持修炼法轮功，多次遭骚扰、绑架、非法关押，曾经被非法劳教，身心上长期遭受高压迫害，于11月底含冤离世，终年64岁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 5:37 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/28/n11750711.md#1" target="_blank">每日三退声明精选（2019/12/27）</a><br></h3>我是一名普通的企业员工，10多年前领导让我加入中共邪党，我没有答应。因为我深知恶党的邪恶，心里深深的抵触它。今年在我不知情的情况下，领导开会通过了我入党的决定。事后以政治任务通知我参加学习，我内心无比痛苦，不想加入这邪恶的组织。现在我郑重提出退出中国共产邪党、中国共青团、中国少先队。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 11:38 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11749335.md#1" target="_blank">大庆油罐车爆炸致4死 官方14天未通报</a><br></h3>黑龙江大庆一个县油罐车发生爆炸，事故发生14天后官方仍未通报。爆炸造成4人死亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 8:24 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11749205.md#1" target="_blank">广州大学前院长获死刑 曾捅死同校处长夫妇</a><br></h3>12月27日，广州大学前院长谢某青，因故意杀人、贪污罪被判处死刑，罚款10万元人民币（下同）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 8:01 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/nsc413_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/ripamf2991/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/ripamf2991/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/ripamf2991/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/ripamf2991/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/ripamf2991/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ripamf2991/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ripamf2991/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/ripamf2991/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/ripamf2991/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ripamf2991/djy/blob/master/gb/nsc413_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ripamf2991/djy/blob/master/gb/nsc413_5.md#1<br><a href="https://github.com/ripamf2991/djy/blob/master/gb/nsc413_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ripamf2991/djy/blob/master/gb/nsc413_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_5.htm">http://www.epochtimes.com/gb/nsc413_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
